# minjasharp

./: .gitignore  MinjaSharp.sln  README.md  build.ps1  build.sh  dotnet-releaser.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml
src/MinjaSharp/: Context.cs  Exceptions.cs  MinjaSharp.csproj  Native.cs  Template.cs  Value.cs  ValueBuilder.cs
src/cpp/: CMakeLists.txt  minja_shim_ext.cpp  minja_shim_ext.h
test/MinjaSharp.Tests/: ErrorHandlingTests.cs  JsonRenderingTests.cs  MinjaSharp.Tests.csproj  Qwen3Models.cs  Qwen3Template.cs  Qwen3TemplateTests.cs  TemplateTests.cs  ValueBuilderTests.cs
